# resonant-graph-synth

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md
resources/: ResonantGraphSynth.icns
scripts/: generate_icon.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/core/: Exciter.cpp  Exciter.h  Resonator.cpp  Resonator.h  ResonatorGraph.cpp  ResonatorGraph.h
src/gui/: GraphView.cpp  GraphView.h
